gcc/testsuite/g++.dg/coroutines/co-await-syntax-00-needs-expr.C
//  { dg-additional-options "-fsyntax-only -w" }

#include "coro.h"

void bar () {
  co_await;  // { dg-error "expected primary-expression before" }
}
